video bug fixed
now full covering video is available

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
     width: 100%;
     background-color: #020202;
     font-size: 30px;
+    /* overflow-x: hidden; */
 }
 
 .landingTitle {
@@ -255,9 +256,9 @@ video {
 
 .videoclip {
     opacity: 0;
-    width: 1500px;
+    /* width: 1500px; */
     position: absolute;
-    left: -20%;
+    /* left: -20%; */
 }
 
 .graphbox {
